syntax = "proto3";

package news.api.comment.appcomment.v1;

import "google/api/annotations.proto";

service AppComment {
    rpc Submit(SubmitRequest) returns (SubmitResponse) {
        option (google.api.http) = {
              post: "/v1/comment/submit"
        };
    }
    rpc Query(QueryRequest) returns (QueryResponse) {
        option (google.api.http) = {
              get: "/v1/comment"
        };
    }
}

message SubmitRequest {
    int64 ObjID = 1;
    int32 ObjType = 2;
    string UserName = 3;
    string Content = 4;
}

message SubmitResponse {
    int64 ID = 1;
}

message QueryRequest {
    int64 ObjID = 1;
    int32 ObjType = 2;
}

message QueryResponse {
    message QueryItem {
        int64 ID = 1;
        int64 ObjID = 2;
        int32 ObjType = 3;
        string UserName = 4;
        string Content = 5;
    }
    repeated QueryItem items = 1;
}

